2016-05-22  Dan Bernstein  <mitz@apple.com>

        Correct the previous build fix attempt.

        * wtf/StdLibExtras.h:

2016-05-22  Dan Bernstein  <mitz@apple.com>

        Build fix for non-C++14 Apple projects that use WTF.

        Rubber-stamped by Anders.

        * wtf/StdLibExtras.h:

2016-05-22  Brady Eidson  <beidson@apple.com>

        Move to C++14.
        https://bugs.webkit.org/show_bug.cgi?id=157948

        Reviewed by Michael Catanzaro.

        * Configurations/Base.xcconfig:
        
        Delete a lot of "stl additions until we can adopt C++14" code:
        * wtf/StdLibExtras.h:
        (std::make_unique): Deleted.
        (std::index_sequence::size): Deleted.
        (std::exchange): Deleted.
        (std::literals::chrono_literals::operator _s): Deleted.
        (std::literals::chrono_literals::operator _ms): Deleted.

2016-05-20  Rawinder Singh  <rawinder.singh-webkit@cisra.canon.com.au>

        Implement operator== for WeakPtr
        https://bugs.webkit.org/show_bug.cgi?id=157883

        Reviewed by Chris Dumez.

        Implement operator== and operator!= for WeakPtr and update code to use the operators.

        * wtf/WeakPtr.h:
        (WTF::operator==):
        (WTF::operator!=):

2016-05-19  Chris Dumez  <cdumez@apple.com>

        Improve compile-time assertions in is<>() / downcast<>()
        https://bugs.webkit.org/show_bug.cgi?id=157817

        Reviewed by Darin Adler.

        * wtf/Ref.h:
        (WTF::is):
        Add is<>() overloads taking a Ref<>() so that is<>() keeps working when
        passing a Ref<>(), despite the new static assertions on the input type.
        Some call sites were already leveraging this as it was working by
        implicitly converting the Ref<T> into a T&.

        * wtf/TypeCasts.h:
        (WTF::is):
        (WTF::downcast):
        Make static assertions stricter in is<>() / downcast<>() to catch more
        cases where those are either unnecessary or incorrect.
