@@ -1,5 +1,13 @@
 2016-05-22  Dan Bernstein  <mitz@apple.com>
 
+        Additional fixes for non-C++14 Apple projects that use WTF.
+
+        * wtf/StdLibExtras.h:
+        (std::make_unique):
+        (std::move):
+
+2016-05-22  Dan Bernstein  <mitz@apple.com>
+
         Correct the previous build fix attempt.
 
         * wtf/StdLibExtras.h:
